option(BUILD_VISION "Use AEVision plugin" OFF)
message("Build AEVision: ${BUILD_VISION}")
if(BUILD_VISION)
	add_subdirectory(AEVision)
endif()

option(BUILD_COLLADA "Use COLLADA DOM plugin" OFF)
message("Build COLLADA DOM plugin: ${BUILD_COLLADA}")
if(BUILD_COLLADA)
	add_subdirectory(COLLADA)
endif()

option(BUILD_RES_MANAGER "Use resource manager (required)" ON)
message("Build ResourceManager: ${BUILD_RES_MANAGER}")
if(BUILD_RES_MANAGER)
	add_subdirectory(ResourceManager)
endif()

option(BUILD_LIBPNG "Build libpng to link statically (required)" ON)
message("Build libpng: ${BUILD_LIBPNG}")
if(BUILD_LIBPNG)
	add_subdirectory(ImageLoader/extra/libpng)
endif()